Adding the nav bar with the logo

--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="style/style.css">
+    <title>Elisabeth Hoffmann Watercolors</title>
 </head>
 <body>
+<header>
+    <nav>
+        <img src="images/logo.png" alt="logo Elisabeth Hoffmann">
+        <div>
+            <a href="index.html">Home</a>
+            <a href="paintings.html">Paintings</a>
+            <a href="about.html">About</a>
+        </div>
+        <a href="#" class="link-basket">Basket</a>
+    </nav>
+</header>
+<main>
 
+</main>
+<footer>
+
+</footer>
 </body>
 </html>
