Adding intro section with eh photo

--- a/index.html
+++ b/index.html
@@ -2,23 +2,48 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap" rel="stylesheet">
     <title>Elisabeth Hoffmann Watercolors</title>
 </head>
 <body>
 <header>
     <nav>
-        <img src="images/logo.png" alt="logo Elisabeth Hoffmann">
-        <div>
-            <a href="index.html">Home</a>
+        <a href="index.html" class="link-logo">
+            <img src="images/logo.png" alt="logo Elisabeth Hoffmann">
+        </a>
+        <div class="nav-middle">
+            <a href="index.html"><b>Home</b></a>
             <a href="paintings.html">Paintings</a>
             <a href="about.html">About</a>
         </div>
-        <a href="#" class="link-basket">Basket</a>
+        <a href="#" class="link-basket">
+            <img src="images/basket.png" alt="Shopping basket">
+        </a>
     </nav>
 </header>
 <main>
-
+    <section class="sect-intro-eh">
+        <div>
+            <h1>Elisabeth Hoffmann Watercolorist</h1>
+            <p>
+                Artist painter from <em>Bordeaux</em> settled in the middle of the vineyards,
+                but thanks to her exhibitions, Elisabeth Hoffmann travels a lot, in France and beyond.
+                The rewards which mark her career testify, if it is necessary,
+                of the success that her productions meet with an increasingly large and international public.
+                His paintings breathe serenity and sincerity.
+                His inspirations, the vineyard, the bassin of Arcachon, Bordeaux or St Emilion.
+                Let live vivid colors or melted thanks to the delicate touch of the watercolor.
+                Elisabeth has at heart to express the foundations of a fluid painting
+                where a few right touches are enough to express the essential.
+            </p>
+            <a href="#TODO" class="cta">A PROJECT ? CONTACT ME</a>
+        </div>
+        <img src="images/intro-eh.jpeg" alt="Elisabeth Hoffmann holding a brush and a painting">
+    </section>
 </main>
 <footer>
 
