--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="images/logo.png" alt="logo Elisabeth Hoffmann">
         </a>
         <div class="nav-middle">
-            <a href="index.html"><b>Home</b></a>
+            <a href="index.html">Home</a>
             <a href="paintings.html">Paintings</a>
             <a href="about.html">About</a>
         </div>
@@ -34,19 +34,41 @@
                 but thanks to her exhibitions, Elisabeth Hoffmann travels a lot, in France and beyond.
                 The rewards which mark her career testify, if it is necessary,
                 of the success that her productions meet with an increasingly large and international public.
-                His paintings breathe serenity and sincerity.
+                His paintings breathe serenity and sincerity.<br>
                 His inspirations, the vineyard, the bassin of Arcachon, Bordeaux or St Emilion.
                 Let live vivid colors or melted thanks to the delicate touch of the watercolor.
                 Elisabeth has at heart to express the foundations of a fluid painting
                 where a few right touches are enough to express the essential.
             </p>
-            <a href="#TODO" class="cta">A PROJECT ? CONTACT ME</a>
+            <a href="mailto:elisabeth.hoffmann@sfr.fr" class="cta">A PROJECT ? CONTACT ME</a>
         </div>
         <img src="images/intro-eh.jpeg" alt="Elisabeth Hoffmann holding a brush and a painting">
     </section>
+    <section class="sect-last-project">
+        <h2>My last project</h2>
+        <div>
+            <img src="images/last-project/1744.jpg" alt="">
+            <img src="images/last-project/1745.jpg" alt="">
+            <img src="images/last-project/1746.jpg" alt="">
+            <img src="images/last-project/1747.jpg" alt="">
+        </div>
+    </section>
+    <section class="TODO: grid comme apple.com">
+    </section>
 </main>
 <footer>
-
+    <a href="index.html">
+        <img src="images/logo.png" alt="Logo EH">
+    </a>
+    <a href="mailto:elisabeth.hoffmann@sfr.fr">Contact me</a>
+    <div>
+        <a href="https://fr-fr.facebook.com/ehoffmannwatercolor/" target="_blank">
+            <img src="images/facebook.png" alt="Facebook logo redirecting to EH facebook page">
+        </a>
+        <a href="https://www.instagram.com/elisabeth_hoffmann_artist/" target="_blank">
+            <img src="images/instagram.png" alt="Instagram logo redirecting to EH instagram page">
+        </a>
+    </div>
 </footer>
 </body>
 </html>
