--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="Elisabeth Hoffmann" content="ecommerce website">
+    <meta name="description" content="Artist painter from Bordeaux settled in the middle of the vineyards proposed
+    some wonderful watercolors and others of France">
+    <meta property="og:image" content="images/logo.png">
+    <meta property="og:description" content="Elisabeth Hoffmann ecommerce website. Artist painter from Bordeaux settled in the middle of the vineyards proposed
+    some wonderful watercolors and others of France">
+    <meta property="og:title" content="Elisabeth Hoffmann Watercolorist">
+    <meta property="twitter:image" content="images/logo.png">
+    <meta property="twitter:description" content="Elisabeth Hoffmann ecommerce website. Artist painter from Bordeaux settled in the middle of the vineyards proposed
+    some wonderful watercolors and others of France">
+    <meta property="twitter:title" content="Elisabeth Hoffmann Watercolorist">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap" rel="stylesheet">
     <title>Elisabeth Hoffmann Watercolors</title>
+    <link rel="shortcut icon" href="images/logo.ico" type="image/x-icon">
 </head>
 <body>
 <header>
@@ -16,9 +28,9 @@
             <img src="images/logo.png" alt="logo Elisabeth Hoffmann">
         </a>
         <div class="nav-middle">
-            <a href="index.html">Home</a>
-            <a href="paintings.html">Paintings</a>
-            <a href="about.html">About</a>
+            <a href="index.html" title="Home page">Home</a>
+            <a href="paintings.html" title="Paintings page that acts like a gallery">Paintings</a>
+            <a href="about.html" title="About page containing my story">About</a>
         </div>
         <a href="#" class="link-basket">
             <img src="images/basket.png" alt="Shopping basket">
