Added section for bg image pont de pierre

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <link rel="stylesheet" href="styles/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Manrope:wght@400;700&display=swap" rel="stylesheet">
     <title>Elisabeth Hoffmann Watercolors</title>
     <link rel="shortcut icon" href="images/logo.ico" type="image/x-icon">
 </head>
 <body>
 <header>
     <nav>
-        <a href="index.html" class="link-logo">
+        <a href="index.html">
             <img src="images/logo.png" alt="logo Elisabeth Hoffmann">
         </a>
         <div class="nav-middle">
@@ -32,38 +32,35 @@
             <a href="paintings.html" title="Paintings page that acts like a gallery">Paintings</a>
             <a href="about.html" title="About page containing my story">About</a>
         </div>
-        <a href="#" class="link-basket">
+        <a href="#">
             <img src="images/basket.png" alt="Shopping basket">
         </a>
     </nav>
 </header>
 <main>
+    <section class="sect-image-bg">
+        <h1>Elisabeth Hoffmann Watercolorist</h1>
+    </section>
     <section class="sect-intro-eh">
         <div>
-            <h1>Elisabeth Hoffmann Watercolorist</h1>
             <p>
                 Artist painter from <em>Bordeaux</em> settled in the middle of the vineyards,
                 but thanks to her exhibitions, Elisabeth Hoffmann travels a lot, in France and beyond.
-                The rewards which mark her career testify, if it is necessary,
-                of the success that her productions meet with an increasingly large and international public.
-                His paintings breathe serenity and sincerity.<br>
-                His inspirations, the vineyard, the bassin of Arcachon, Bordeaux or St Emilion.
+                Her inspirations, the vineyard, the bassin of Arcachon, Bordeaux or St Emilion.
                 Let live vivid colors or melted thanks to the delicate touch of the watercolor.
-                Elisabeth has at heart to express the foundations of a fluid painting
-                where a few right touches are enough to express the essential.
             </p>
             <a href="mailto:elisabeth.hoffmann@sfr.fr" class="cta">A PROJECT ? CONTACT ME</a>
         </div>
-        <img src="images/intro-eh.jpeg" alt="Elisabeth Hoffmann holding a brush and a painting">
+        <!--                <img src="images/intro-eh.jpeg" alt="Elisabeth Hoffmann holding a brush and a painting">-->
     </section>
     <section class="sect-last-project">
-        <h2>My last project</h2>
-        <div>
-            <img src="images/last-project/1744.jpg" alt="">
-            <img src="images/last-project/1745.jpg" alt="">
-            <img src="images/last-project/1746.jpg" alt="">
-            <img src="images/last-project/1747.jpg" alt="">
-        </div>
+        <!--        <h2>My last project</h2>-->
+        <!--        <div>-->
+        <!--            <img src="images/last-project/1744.jpg" alt="">-->
+        <!--            <img src="images/last-project/1745.jpg" alt="">-->
+        <!--            <img src="images/last-project/1746.jpg" alt="">-->
+        <!--            <img src="images/last-project/1747.jpg" alt="">-->
+        <!--        </div>-->
     </section>
     <section class="TODO: grid comme apple.com">
     </section>
@@ -72,7 +69,7 @@
     <a href="index.html">
         <img src="images/logo.png" alt="Logo EH">
     </a>
-    <a href="mailto:elisabeth.hoffmann@sfr.fr">Contact me</a>
+    <a class="footer-contact-me" href="mailto:elisabeth.hoffmann@sfr.fr">Contact me</a>
     <div>
         <a href="https://fr-fr.facebook.com/ehoffmannwatercolor/" target="_blank">
             <img src="images/facebook.png" alt="Facebook logo redirecting to EH facebook page">
