Quick home page and redirection on inprogress

--- a/index.html
+++ b/index.html
@@ -1,83 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="Elisabeth Hoffmann" content="ecommerce website">
+    <meta charset="UTF-8" />
+    <meta name="Elisabeth Hoffmann" content="ecommerce website" />
     <meta name="description" content="Artist painter from Bordeaux settled in the middle of the vineyards proposed
-    some wonderful watercolors and others of France">
-    <meta property="og:image" content="images/logo.png">
+    some wonderful watercolors and others of France" />
+    <meta property="og:image" content="images/logo.png" />
     <meta property="og:description" content="Elisabeth Hoffmann ecommerce website. Artist painter from Bordeaux settled in the middle of the vineyards proposed
-    some wonderful watercolors and others of France">
-    <meta property="og:title" content="Elisabeth Hoffmann Watercolorist">
-    <meta property="twitter:image" content="images/logo.png">
+    some wonderful watercolors and others of France" />
+    <meta property="og:title" content="Elisabeth Hoffmann Watercolorist" />
+    <meta property="twitter:image" content="images/logo.png" />
     <meta property="twitter:description" content="Elisabeth Hoffmann ecommerce website. Artist painter from Bordeaux settled in the middle of the vineyards proposed
-    some wonderful watercolors and others of France">
-    <meta property="twitter:title" content="Elisabeth Hoffmann Watercolorist">
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/index.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Manrope:wght@400;700&display=swap" rel="stylesheet">
+    some wonderful watercolors and others of France" />
+    <meta property="twitter:title" content="Elisabeth Hoffmann Watercolorist" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Manrope:wght@400;700&display=swap"
+        rel="stylesheet" />
     <title>Elisabeth Hoffmann Watercolors</title>
-    <link rel="shortcut icon" href="images/logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/logo.ico" type="image/x-icon" />
 </head>
+
 <body>
-<header>
-    <nav>
+    <header>
+        <nav>
+            <a href="index.html">
+                <img src="images/logo.png" alt="logo Elisabeth Hoffmann" />
+            </a>
+            <div class="nav-middle">
+                <a href="index.html" title="Home page">Home</a>
+                <a href="inprogress.html" title="Paintings page that acts like a gallery">Paintings</a>
+                <a href="inprogress.html" title="About page containing my story">About</a>
+            </div>
+            <a href="inprogress.html">
+                <img src="images/basket.png" alt="Shopping basket" />
+            </a>
+        </nav>
+    </header>
+    <main>
+        <section class="sect-image-bg">
+            <h1>Elisabeth Hoffmann Watercolorist</h1>
+        </section>
+        <section class="sect-intro-eh">
+            <div>
+                <p>
+                    Artist painter from <em>Bordeaux</em> settled in the middle of the
+                    vineyards, but thanks to her exhibitions, Elisabeth Hoffmann travels
+                    a lot, in France and beyond. Her inspirations, the vineyard, the
+                    bassin of Arcachon, Bordeaux or St Emilion. Let live vivid colors or
+                    melted thanks to the delicate touch of the watercolor.
+                </p>
+                <a href="mailto:elisabeth.hoffmann@sfr.fr" class="cta">A PROJECT ? CONTACT ME</a>
+            </div>
+        </section>
+        <section class="sect-last-project">
+            <h2>My last project</h2>
+            <div class="col-imgs">
+                <img src="images/last-project/1744.jpg" alt="" class="img-last-project" />
+                <img src="images/last-project/1745.jpg" alt="" class="img-last-project" />
+                <img src="images/last-project/1746.jpg" alt="" class="img-last-project" />
+                <img src="images/last-project/1747.jpg" alt="" class="img-last-project" />
+            </div>
+        </section>
+        <!-- <section class="TODO: grid comme apple.com"></section> -->
+    </main>
+    <footer>
         <a href="index.html">
-            <img src="images/logo.png" alt="logo Elisabeth Hoffmann">
+            <img src="images/logo.png" alt="Logo EH" />
         </a>
-        <div class="nav-middle">
-            <a href="index.html" title="Home page">Home</a>
-            <a href="paintings.html" title="Paintings page that acts like a gallery">Paintings</a>
-            <a href="about.html" title="About page containing my story">About</a>
-        </div>
-        <a href="#">
-            <img src="images/basket.png" alt="Shopping basket">
-        </a>
-    </nav>
-</header>
-<main>
-    <section class="sect-image-bg">
-        <h1>Elisabeth Hoffmann Watercolorist</h1>
-    </section>
-    <section class="sect-intro-eh">
         <div>
-            <p>
-                Artist painter from <em>Bordeaux</em> settled in the middle of the vineyards,
-                but thanks to her exhibitions, Elisabeth Hoffmann travels a lot, in France and beyond.
-                Her inspirations, the vineyard, the bassin of Arcachon, Bordeaux or St Emilion.
-                Let live vivid colors or melted thanks to the delicate touch of the watercolor.
-            </p>
-            <a href="mailto:elisabeth.hoffmann@sfr.fr" class="cta">A PROJECT ? CONTACT ME</a>
+            <a class="footer-contact-me" href="mailto:elisabeth.hoffmann@sfr.fr">Contact me</a>
+            <a href="https://fr-fr.facebook.com/ehoffmannwatercolor/" target="_blank">
+                <img src="images/facebook.png" alt="Facebook logo redirecting to EH facebook page" />
+            </a>
+            <a href="https://www.instagram.com/elisabeth_hoffmann_artist/" target="_blank">
+                <img src="images/instagram.png" alt="Instagram logo redirecting to EH instagram page" />
+            </a>
         </div>
-        <!--                <img src="images/intro-eh.jpeg" alt="Elisabeth Hoffmann holding a brush and a painting">-->
-    </section>
-    <section class="sect-last-project">
-        <!--        <h2>My last project</h2>-->
-        <!--        <div>-->
-        <!--            <img src="images/last-project/1744.jpg" alt="">-->
-        <!--            <img src="images/last-project/1745.jpg" alt="">-->
-        <!--            <img src="images/last-project/1746.jpg" alt="">-->
-        <!--            <img src="images/last-project/1747.jpg" alt="">-->
-        <!--        </div>-->
-    </section>
-    <section class="TODO: grid comme apple.com">
-    </section>
-</main>
-<footer>
-    <a href="index.html">
-        <img src="images/logo.png" alt="Logo EH">
-    </a>
-    <a class="footer-contact-me" href="mailto:elisabeth.hoffmann@sfr.fr">Contact me</a>
-    <div>
-        <a href="https://fr-fr.facebook.com/ehoffmannwatercolor/" target="_blank">
-            <img src="images/facebook.png" alt="Facebook logo redirecting to EH facebook page">
-        </a>
-        <a href="https://www.instagram.com/elisabeth_hoffmann_artist/" target="_blank">
-            <img src="images/instagram.png" alt="Instagram logo redirecting to EH instagram page">
-        </a>
-    </div>
-</footer>
+    </footer>
 </body>
+
 </html>
